# StockVerse

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.bat  run.ps1
output/: decision.md  research_report.json  trending_companies.json
src/stock_picker/: crew.py  gradio_ui.py
src/stock_picker/tools/: push_tool.py
