[project]
name = "stock_picker"
version = "0.1.0"
description = "stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "huggingface-hub>=0.24.0,<1.0.0",
    "crewai[tools]>=0.108.0,<1.0.0",
    "gradio>=4.44.0"
]

[project.scripts]
stock_picker = "stock_picker.main:run"
run_crew = "stock_picker.main:run"
train = "stock_picker.main:train"
replay = "stock_picker.main:replay"
test = "stock_picker.main:test"
stock-picker-ui = "stock_picker.gradio_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
